deployment/k8s/kong-gateway/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: siakad-kong-gateway
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      backendRefs:
        - name: siakad-auth-api
          kind: Service
          port: 5001
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/payment
      backendRefs:
        - name: siakad-payment-api
          kind: Service
          port: 5004
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/announcement
      backendRefs:
        - name: siakad-announcement-api
          kind: Service
          port: 5005
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/schedule
      backendRefs:
        - name: siakad-schedule-api
          kind: Service
          port: 5010
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/krs
      backendRefs:
        - name: siakad-krs-api
          kind: Service
          port: 5008
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/data
      backendRefs:
        - name: siakad-data-api
          kind: Service
          port: 5010
